<resources>
    <string name="app_name">Registration app</string>
    <string name="registration_form">Registration form</string>
    <string name="welcome_to_adventure_learning_club">Welcome to adventure learning club!</string>
    <string name="demo_my_login_button">Demo My Login Button</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-mail</string>
    <string name="school">School</string>
    <string name="student_id">Student ID</string>
    <string name="register">Register</string>
</resources>